# pyiron_workflow_lammps

./: .coveragerc  .gitattributes  CHANGELOG.md  README.md  TEST_SUMMARY.md  pyproject.toml  run_tests.py
.binder/: environment.yml  postBuild
.ci_support/: environment.yml  lower-bound.yml  lower-bounds.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/.support/: pypi_vs_conda_names.json  update_pyproject_dependencies.py
.github/workflows/: preview-release.yml  push-pull.yml  pyproject-release.yml  release.yml
docs/: conf.py  environment.yml  index.rst
docs/design/plans/: 2026-05-12-engine-protocol-migration.md
docs/design/specs/: 2026-05-12-engine-protocol-migration-design.md
lammps_job/: recovery.pckl
notebooks/: EnginePrototype_lammps.ipynb  example.ipynb
parse_LammpsOutput/: recovery.cpckl  recovery.pckl
pyiron_workflow_lammps/: __init__.py  engine.py  generic.py  lammps.py
pyiron_workflow_lammps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: run_tests.py
tests/: README.md  conftest.py  run_tests.py
tests/benchmark/: test_benchmark.py
tests/integration/: test_integration.py
tests/resources/: dump.out  lammps.data  log.lammps
tests/unit/: test_engine.py  test_engine_conformance.py  test_generic.py  test_lammps.py  test_suite.py  test_tests.py  test_velocity_capture.py  test_version.py
