[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyiron_workflow_lammps"
version = "0.1.0"
description = "A LAMMPS workflow integration package for pyiron"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "pyiron Team", email = "pyiron@mpie.de" }
]
keywords = ["pyiron", "lammps", "workflow", "molecular-dynamics", "materials-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.20.0, <2.0.0",
    "pandas>=1.3.0",
    "pyiron_workflow>=0.1.0",
    "pyiron_lammps",
    "ase>=3.22.0",
    "pymatgen>=2023.0.0",  # Used for LAMMPS dump parsing
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]
notebook = [
    "jupyter>=1.0.0",
    "notebook>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/pyiron/pyiron_workflow_lammps"
Documentation = "https://github.com/pyiron/pyiron_workflow_lammps"
Repository = "https://github.com/pyiron/pyiron_workflow_lammps.git"
"Bug Tracker" = "https://github.com/pyiron/pyiron_workflow_lammps/issues"

[tool.hatch.build.targets.wheel]
packages = ["pyiron_workflow_lammps"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=pyiron_workflow_lammps"
testpaths = [
    "tests",
] 