[build-system]
requires = [
    "setuptools>=68.0.0",
    "versioneer[toml]==0.29",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyiron_workflow_lammps"
description = "A LAMMPS workflow integration package for pyiron"
readme = "README.md"
keywords = ["pyiron", "lammps", "workflow", "molecular-dynamics", "materials-science"]
requires-python = ">=3.11, <3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy==2.3.5",
    "pandas==2.3.1",
    "pyiron-workflow==0.15.2",
    "pyiron-workflow-atomistics==0.0.4",
    "pyiron-lammps==0.4.6",
    "ase==3.26.0",
    "pymatgen==2025.6.14",
]
dynamic = ["version"]
authors = [
    { name = "pyiron Team", email = "pyiron@mpie.de" },
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/pyiron/pyiron_workflow_lammps"
Documentation = "https://github.com/pyiron/pyiron_workflow_lammps"
Repository = "https://github.com/pyiron/pyiron_workflow_lammps"
"Bug Tracker" = "https://github.com/pyiron/pyiron_workflow_lammps/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "ruff>=0.5",
]
notebook = [
    "jupyter>=1.0.0",
    "notebook>=6.0.0",
]
cluster = [
    "pysqa==0.3.0",
    "h5py==3.14.0",
]

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "pyiron_workflow_lammps/_version.py"
parentdir_prefix = "pyiron_workflow_lammps"
tag_prefix = "pyiron_workflow_lammps-"

[tool.setuptools.packages.find]
include = ["pyiron_workflow_lammps*"]

[tool.setuptools.dynamic.version]
attr = "pyiron_workflow_lammps.__version__"

[tool.ruff]
exclude = ["docs", "notebooks", "setup.py", "_version.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "C4",  # flake8-comprehensions
    "ERA", # eradicate
    "PL",  # pylint
]
ignore = [
    "E501",     # line length
    "PLR0913",  # too many args
    "PLR2004",  # magic values
    "PLC0414",  # import alias does not rename
    "PLR0912",  # too many branches
    "PLR0915",  # too many statements
    "PLR0911",  # too many returns
]

[tool.ruff.lint.per-file-ignores]
"pyiron_workflow_lammps/__init__.py" = ["F401"]

[tool.black]
extend-exclude = '''
(
  ^/docs
)
'''

[tool.mypy]
exclude = [
    "^docs/conf\\.py$",
    "^tests/",
]
ignore_missing_imports = true
strict_equality = true
