[build-system]
requires = [
    "setuptools>=68.0.0",
    "versioneer[toml]==0.29",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyiron_workflow_lammps"
description = "A LAMMPS workflow integration package for pyiron"
readme = "README.md"
keywords = ["pyiron", "lammps", "workflow", "molecular-dynamics", "materials-science"]
requires-python = ">=3.11, <3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy==1.26.4",
    "pandas==3.0.0",
    "matplotlib==3.10.9",
    "ase==3.27.0",
    "scipy==1.17.0",
    "pyiron-workflow==0.15.6",
    "pyiron-workflow-atomistics==0.0.7",
    "pymatgen==2026.5.4",
    "pyiron_snippets==1.2.1",
    "scikit-learn==1.8.0",
    "lz-GB-code==0.1.0",
    "tqdm==4.67.3",
    "pyiron-lammps==0.5.4",
]
dynamic = ["version"]
authors = [
    { name = "pyiron Team", email = "pyiron@mpie.de" },
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/pyiron/pyiron_workflow_lammps"
Documentation = "https://github.com/pyiron/pyiron_workflow_lammps"
Repository = "https://github.com/pyiron/pyiron_workflow_lammps"
"Bug Tracker" = "https://github.com/pyiron/pyiron_workflow_lammps/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "ruff>=0.5",
]
notebook = [
    "jupyter>=1.0.0",
    "notebook>=6.0.0",
]
cluster = [
    "pysqa==0.4.0",
    "h5py==3.16.0",
]

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "pyiron_workflow_lammps/_version.py"
parentdir_prefix = "pyiron_workflow_lammps"
tag_prefix = "pyiron_workflow_lammps-"

[tool.setuptools.packages.find]
include = ["pyiron_workflow_lammps*"]

[tool.setuptools.dynamic.version]
attr = "pyiron_workflow_lammps.__version__"

[tool.ruff]
exclude = ["docs", "notebooks", "setup.py", "_version.py", ".github"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "C4",  # flake8-comprehensions
    "ERA", # eradicate
    "PL",  # pylint
]
ignore = [
    "E501",     # line length
    "PLR0913",  # too many args
    "PLR2004",  # magic values
    "PLC0414",  # import alias does not rename
    "PLR0912",  # too many branches
    "PLR0915",  # too many statements
    "PLR0911",  # too many returns
]

[tool.ruff.lint.per-file-ignores]
"pyiron_workflow_lammps/__init__.py" = ["F401"]
# Pre-existing patterns in modules carried over from before the Engine
# Protocol migration. Lint them in-place rather than rewriting moved code:
#   B028 — warnings.warn without explicit stacklevel
#   ERA001 — commented-out code (mostly debug prints)
#   PLC0415 — non-top-level imports (intentional for circular-import avoidance)
#   B006 — mutable default args (in helper signatures, behavior-preserving)
#   PLR0915, PLR0912 — long function bodies (parse_LammpsOutput etc.)
"pyiron_workflow_lammps/engine.py" = ["B028", "ERA001", "PLC0415"]
"pyiron_workflow_lammps/generic.py" = ["B006", "ERA001", "PLC0415"]
"pyiron_workflow_lammps/lammps.py" = ["B028", "ERA001", "PLC0415", "B006", "PLR0915", "PLR0912", "B007", "SIM108", "SIM102", "B904", "F841"]
# Pre-existing test debris (commented-out experiments, lazy imports for
# heavy deps, lambda-as-var, blind pytest.raises(Exception), unused locals
# in expectation-only assertions, etc.).
"tests/**" = ["ERA001", "PLC0415", "E731", "B017", "F841", "B007"]

[tool.black]
extend-exclude = '''
(
  ^/docs
)
'''

[tool.mypy]
exclude = [
    "^docs/conf\\.py$",
    "^tests/",
]
ignore_missing_imports = true
strict_equality = true
